@@ -253,6 +253,13 @@ public:
     /**
      * \return the byte read in the buffer.
      *
+     * Read data, but do not advance the Iterator read.
+     */
+    inline uint8_t  PeekU8 (void);
+
+    /**
+     * \return the byte read in the buffer.
+     *
      * Read data and advance the Iterator by the number of bytes
      * read.
      */
@@ -334,10 +341,20 @@ public:
      * \param size number of bytes to copy
      *
      * Copy size bytes of data from the internal buffer to the
-     * input buffer and avance the Iterator by the number of
+     * input buffer and advance the Iterator by the number of
      * bytes read.
      */
     void Read (uint8_t *buffer, uint32_t size);
+
+    /**
+     * \param start start iterator of the buffer to copy data into
+     * \param size  number of bytes to copy
+     *
+     * Copy size bytes of data from the internal buffer to the input buffer via
+     * the provided iterator and advance the Iterator by the number of bytes
+     * read.
+     */
+    inline void Read (Iterator start, uint32_t size);
 
     /**
      * \brief Calculate the checksum.
@@ -816,7 +833,7 @@ Buffer::Iterator::ReadNtohU32 (void)
 }
 
 uint8_t
-Buffer::Iterator::ReadU8 (void)
+Buffer::Iterator::PeekU8 (void)
 {
   NS_ASSERT_MSG (m_current >= m_dataStart &&
                  m_current <= m_dataEnd,
@@ -825,20 +842,25 @@ Buffer::Iterator::ReadU8 (void)
   if (m_current < m_zeroStart)
     {
       uint8_t data = m_data[m_current];
-      m_current++;
       return data;
     }
   else if (m_current < m_zeroEnd)
     {
-      m_current++;
       return 0;
     }
   else
     {
       uint8_t data = m_data[m_current - (m_zeroEnd-m_zeroStart)];
-      m_current++;
       return data;
     }
+}
+
+uint8_t
+Buffer::Iterator::ReadU8 (void)
+{
+  uint8_t ret = PeekU8 ();
+  m_current ++;
+  return ret;
 }
 
 uint16_t 
@@ -852,6 +874,16 @@ Buffer::Iterator::ReadU16 (void)
 
   return data;
 }
+
+void
+Buffer::Iterator::Read (Buffer::Iterator start, uint32_t size)
+{
+  Buffer::Iterator end = *this;
+  end.Next (size);
+  
+  start.Write (*this, end);
+}
+
 
 Buffer::Buffer (Buffer const&o)
   : m_data (o.m_data),
